• fix overflow mistyped • some cleanups

--- a/src/components/Content/ContentContainer.scss
+++ b/src/components/Content/ContentContainer.scss
@@ -9,8 +9,8 @@
     top: 100px;
     color: $page-fg;
     @include transition('ease-in-out', 0.3s);
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 @media (max-width: 767px) {
