--- a/src/components/UnderConstruction/UnderConstruction.scss
+++ b/src/components/UnderConstruction/UnderConstruction.scss
@@ -18,6 +18,7 @@
 }
 
 @media (max-width: 767px) {
+    .no-page,
     .under-construction {
         width: 300px;
         height: 244px;
